fix button click on mobile

--- a/portfolio/styles/contact.scss
+++ b/portfolio/styles/contact.scss
@@ -10,6 +10,7 @@ input, textarea{
     width: 100%;
 }
 button{
+  cursor: pointer;
   background: #252527;
   color: #fff;
   border-radius: 15px;
